--- a/Source/AdvancedRaiders/AdvancedRaiders.csproj
+++ b/Source/AdvancedRaiders/AdvancedRaiders.csproj
@@ -61,6 +61,10 @@
   <ItemGroup>
     <Compile Include="AdvancedRaiders.cs" />
     <Compile Include="AdvancedRaidersDefOf.cs" />
+    <Compile Include="CompTargetEffect_UkuphilaResurrect.cs" />
+    <Compile Include="JobDriver_MakeUkuphilaZombie.cs" />
+    <Compile Include="JobGiver_MakeUkuphilaZombie.cs" />
+    <Compile Include="MentalState_UkuphilaResurrected.cs" />
     <Compile Include="PawnClassDef.cs" />
     <Compile Include="PawnClassDefOf.cs" />
     <Compile Include="HarmonyPatches.cs" />
