--- a/Source/AdvancedRaiders/AdvancedRaiders.csproj
+++ b/Source/AdvancedRaiders/AdvancedRaiders.csproj
@@ -66,6 +66,7 @@
     <Compile Include="JobDriver_BreakTurret.cs" />
     <Compile Include="JobDriver_InspireAllies.cs" />
     <Compile Include="JobDriver_MakeUkuphilaZombie.cs" />
+    <Compile Include="JobDriver_PacifyDownedPawn.cs" />
     <Compile Include="JobGiver_TryUseSpecialUnitAbility.cs" />
     <Compile Include="MentalState_UkuphilaResurrectionPsychosis.cs" />
     <Compile Include="HarmonyPatches.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="SpecialUnitAIUtility.cs" />
     <Compile Include="SpecialUnitUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThoughtWorker_PacifierPTSD.cs" />
     <Compile Include="Trigger_FractionPawnsLostAndNoInspirer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
